--- a/app/src/main/res/layout/activity_payment_history.xml
+++ b/app/src/main/res/layout/activity_payment_history.xml
@@ -77,6 +77,12 @@
                         android:textSize="18sp"
                         android:padding="8dp"
                         android:textColor="#000000" />
+                    <TextView
+                        android:text="Car Plate"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:padding="8dp"
+                        android:textColor="#000000" />
                 </TableRow>
 
             </TableLayout>
